--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,11 @@
     background: #000000;
 }
 
+footer img {
+    height: 50px;
+    width: 50px;
+}
+
 .footer-container {
     max-width: 1200px;
     padding: 120px 20px 60px 20px;
